# final-project

./: .gitignore  INSTRUCTION.md  MusicGame.uproject  Phasemancer.uproject  README.md  final.hipnc  package-lock.json  package.json  webpack.config.js
.github/workflows/: build-and-deploy.yml
Assets/: New Terrain.asset
Assets/Blast/: NvBlastExtAuthoringWrapper.cs  NvBlastExtShadersWrapper.cs  NvBlastWrapper.cs
Assets/Materials/: CubeMaterial.mat  DarkMet.mat  DefaultColor.mat  DefaultExterior.mat  DefaultInterior.mat  Duck.mat  DuckOrange.mat  HitToolMaterial.mat  LighBeamGraph.shadergraph  LightFogMat.mat  Red.mat  ShellMat.mat  TorpMat.mat  TransparentTest.mat  WaterColor.mat  White.mat  WhiteTest.mat
Assets/Models/: doubleturrets.fbx  duck.fbx  shipammo.fbx  shipgame.fbx
Assets/PDollar/Scripts/: Demo.cs
Assets/Prefabs/: Duck.prefab  PlasticBall.prefab  PlasticCube.prefab  PlayerShipParent.prefab  Shell.prefab  Torpedo.prefab
Assets/Resources/: PlasticBall.prefab  Shell.prefab
Assets/Scenes/: MixAndJAm.unity  SampleScene.unity  Test.unity  TestSettings.lighting  testing_scene.unity
Assets/Scripts/: Buoyancy.cs  CameraMover.cs  CubeAssetGenerator.cs  CubeFamily.cs  Demo.cs  Enemy.cs  GpuTerrainPipeline.cs  GroupBehavior.cs  Interfaces.cs  Math.cs  ObjectColor.cs  ObjectSpawner.cs  Player.cs  PlayerTurret.cs  Projectile.cs  Ship.cs  SkyboxController.cs  Torpedo.cs  Turret.cs
Assets/Scripts/Ducks/: Duck.cs  DuckManager.cs
Assets/Scripts/Enemy/: EnemyManager.cs
Assets/Scripts/Fog/: Fog2DTexture.cs  FogVariables.cs
Assets/Scripts/Fractures/: BetterFracture.cs
Assets/Settings/: URP-HighFidelity-Renderer.asset  URP-HighFidelity.asset  URP-TexCam.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/Shaders/: AddClamp.shader  Custom_FogPostProcess.mat  DissipationShader.shader  Erosion.compute  FogDissipating.renderTexture  FogPostProcess.shader  FogRaymarcher.shadergraph  FogShaders.hlsl  PoolTileGraph.shadergraph  RippleShader.shader  Ripples.renderTexture  ScrollTexture.shader  ShaderHelp.hlsl  TestGraph.shadergraph  WaterMat.mat  WaterShader.shadergraph
Assets/Textures/: CrossHair.mat
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/: BP_Collectible_Base.uasset  BP_Potion.uasset  BP_coin.uasset  LowerWheel.uasset  M_TimerPie.uasset  UpperWheel.uasset  WBP_HUD.uasset  Wheel.uasset
Content/BattleWizardPBR/: TitleScreen.umap  WBP_EndScreen.uasset  WBP_SelectWheel.uasset  W_TitleScreen.uasset
Content/LevelActors/: BP_MusicPlayer.uasset  BP_TerrainManager.uasset  BP_TerrainPiece.uasset
Content/LevelPrototyping/: BPI_LevelGlobals.uasset  BP_FloorManager.uasset  BP_LevelGlobals.uasset  BP_MapGenerator.uasset  E_GridDetail.uasset  S_TileDetailRefs.uasset  S_TileSpecifics.uasset
Content/Magic_Gate/: BP_ExitPortal.uasset
Content/Materials/: M_MusicResponse.uasset
Content/TopDown/: Lvl_TopDown.umap
Content/Werewolf/: BP_MonsterAIController.uasset  BP_Werewolf.uasset
Plugins/MegaGrid/: MegaGrid.uplugin
PortalTest/Config/: DefaultEngine.ini  DefaultGame.ini
PortalTest/Content/: Lvl_Portal.umap  Lvl_Portal_HLOD0_Instancing.uasset  NS_Portal.uasset
ProjectSettings/: DynamicsManager.asset  ProjectSettings.asset  TagManager.asset
Saved/Logs/: UnrealVersionSelector-2025.11.11-13.11.52.json
Saved/SourceControl/: UncontrolledChangelists.json
Smoke-Unity/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
SongData/: WeWillRockYou.json  profile.yaml
Source/: MusicGame.Target.cs  MusicGameEditor.Target.cs
Source/MusicGame/: CharacterBase.cpp  CharacterBase.h  MusicAnalyzer.cpp  MusicAnalyzer.h  MusicGame.Build.cs  MusicGame.cpp
UnrealProject/: CIS566final.sln  CIS566final.uproject
UnrealProject/Backup/: CIS566final.sln
UnrealProject/Config/: DefaultEngine.ini  DefaultGame.ini
UnrealProject/Source/: CIS566final.Target.cs  CIS566finalEditor.Target.cs
aquarium-plants-starter-npm/: README.md  index.html  package-lock.json  package.json  vite.config.js
aquarium-plants-starter-npm/src/: main.js  shaders.js
models/: hex.ma
src/: CMakeLists.txt  SceneManager.ts  application.cpp  application.h  camera.cpp  camera.h  main.cpp  main.ts  resource_manager.cpp  resource_manager.h  test_shader.wgsl  texture_holder.cpp  texture_holder.h  ui.ts  webgpu_utils.cpp  webgpu_utils.h
src/geometry/: Grid.ts  Hex.ts  Plane.ts
src/rendering/gl/: OpenGLRenderer.ts  ShaderProgram.ts
src/resources/: test_shader.wgsl
src/shaders/: grid-frag.glsl  grid-vert.glsl
src/utils/: ModelUtils.ts
(+573 files in other folders)
